<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/bg_bottom_sheet_white"
	android:orientation="vertical"
	app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

	<Toolbar
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:clipChildren="false"
		android:clipToPadding="false"
		android:contentInsetEnd="@dimen/spacing_20"
		android:contentInsetStart="@dimen/spacing_20"
		android:elevation="5dp">

		<com.google.android.material.imageview.ShapeableImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/close_button"
			android:elevation="0dp"
			android:layout_gravity="end"
			android:src="@drawable/ic_close_button" />

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_horizontal"
			android:text="@string/guidestyle_ui_style_guide"
			android:textColor="@color/primary_200"
			android:textSize="24sp"
			android:textStyle="bold" />

	</Toolbar>

	<androidx.core.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			tools:context=".GuideStyleFragment">
			<!--		Colors RecyclerView-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/color_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_colors" />

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/color_recycler_view"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
			</LinearLayout>

			<!--		Text Styles RecyclerView-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/text_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:background="@color/guidestyle_black"
					android:layout_marginTop="@dimen/spacing_20"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_text_styles" />

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/text_recycler_view"
					android:layout_marginHorizontal="24dp"
					android:layout_marginVertical="16dp"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
			</LinearLayout>

			<!--		Layout (Spacings) RecyclerView-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/layout_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:background="@color/guidestyle_black"
					android:layout_marginTop="@dimen/spacing_20"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_layout" />

				<androidx.recyclerview.widget.RecyclerView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/layout_recycler_view"
					android:layout_marginHorizontal="18dp"
					android:layout_marginVertical="24dp"
					android:nestedScrollingEnabled="true"
					app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
					app:spanCount="4" />
			</LinearLayout>

			<!--		Buttons List-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/button_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:background="@color/guidestyle_black"
					android:layout_marginTop="@dimen/spacing_20"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_buttons" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:background="@color/guidestyle_black"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:layout_marginTop="@dimen/spacing_20"
					android:text="@string/guidestyle_enabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/button_enabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:background="@color/guidestyle_black"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:layout_marginTop="@dimen/spacing_20"
					android:text="@string/guidestyle_disabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/button_disabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />
			</LinearLayout>

			<!--		RadioButtons list-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:id="@+id/radiobutton_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:background="@color/guidestyle_black"
					android:layout_marginTop="@dimen/spacing_20"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_radiobuttons" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:layout_marginTop="@dimen/spacing_20"
					android:text="@string/guidestyle_enabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/radiobutton_enabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:background="@color/guidestyle_black"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:text="@string/guidestyle_disabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/radiobutton_disabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />
			</LinearLayout>

			<!--		CheckBox List-->
			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:id="@+id/checkbox_container_view"
				android:orientation="vertical">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					style="@style/GuideStyleHeader"
					android:background="@color/guidestyle_black"
					android:layout_marginTop="@dimen/spacing_20"
					android:paddingVertical="@dimen/spacing_2"
					android:text="@string/guidestyle_checkbox" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:background="@color/guidestyle_black"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:layout_marginTop="@dimen/spacing_20"
					android:text="@string/guidestyle_enabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/checkbox_enabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					style="@style/GuideStyleCaption"
					android:background="@color/guidestyle_black"
					android:layout_gravity="start"
					android:layout_marginHorizontal="@dimen/spacing_16"
					android:text="@string/guidestyle_disabled" />

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:id="@+id/checkbox_disabled_container_view"
					android:layout_marginVertical="24dp"
					android:orientation="vertical"
					android:paddingHorizontal="18dp" />
			</LinearLayout>

		</LinearLayout>
	</androidx.core.widget.NestedScrollView>
</LinearLayout>